--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "name": "mxl/meituan-delivery",
+    "name": "miaomiao/meituan-delivery",
     "description": "美团配送",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Aliang\\MeituanDelivery\\": "src/"
+            "MiaoMiao\\MeituanDelivery\\": "src/"
         }
     },
     "authors": [
         {
-            "name": "mxl",
+            "name": "miaomiao",
             "email": "1039803717@qq.com"
         }
     ],
